// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic enum 1`] = `
"import { GraphQLResolveInfo } from \\"graphql\\";

export interface ITypeMap {
  Context: any;
  UserType: any;

  UserParent: any;
}

export namespace IUser {
  export type IdResolver<T extends ITypeMap> = (
    parent: T[\\"UserParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => string;

  export type NameResolver<T extends ITypeMap> = (
    parent: T[\\"UserParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => string;

  export type TypeResolver<T extends ITypeMap> = (
    parent: T[\\"UserParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => T[\\"UserType\\"];

  export interface Resolver<T extends ITypeMap> {
    id: (
      parent: T[\\"UserParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => string;
    name: (
      parent: T[\\"UserParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => string;
    type: (
      parent: T[\\"UserParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => T[\\"UserType\\"];
  }
}

export interface IResolvers<T extends ITypeMap> {
  User: IUser.Resolver<T>;
}
"
`;

exports[`basic schema 1`] = `
"import { GraphQLResolveInfo } from \\"graphql\\";

export interface ITypeMap {
  Context: any;

  QueryParent: any;
  NumberParent: any;
}

export namespace IQuery {
  export type IdResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => string;

  export type Custom_requiredResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => T[\\"NumberParent\\"];

  export type Custom_nullableResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => T[\\"NumberParent\\"] | null;

  export type Custom_array_nullableResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => T[\\"NumberParent\\"][] | null;

  export type Custom_array_requiredResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => T[\\"NumberParent\\"][];

  export interface ArgsCustom_with_arg {
    id: number;
  }

  export type Custom_with_argResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: ArgsCustom_with_arg,
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => T[\\"NumberParent\\"];

  export interface ArgsCustom_with_custom_arg {
    id: T[\\"NumberParent\\"];
  }

  export type Custom_with_custom_argResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: ArgsCustom_with_custom_arg,
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => T[\\"NumberParent\\"];

  export type Scalar_requiredResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => boolean;

  export type Scalar_nullableResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => boolean | null;

  export type Scalar_array_nullableResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => boolean[] | null;

  export type Scalar_array_requiredResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => boolean[];

  export interface ArgsScalar_with_arg {
    id: number;
  }

  export type Scalar_with_argResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: ArgsScalar_with_arg,
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => boolean;

  export interface ArgsScalar_with_custom_arg {
    id: T[\\"NumberParent\\"];
  }

  export type Scalar_with_custom_argResolver<T extends ITypeMap> = (
    parent: T[\\"QueryParent\\"],
    args: ArgsScalar_with_custom_arg,
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => boolean;

  export interface Resolver<T extends ITypeMap> {
    id: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => string;
    custom_required: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => T[\\"NumberParent\\"];
    custom_nullable: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => T[\\"NumberParent\\"] | null;
    custom_array_nullable: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => T[\\"NumberParent\\"][] | null;
    custom_array_required: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => T[\\"NumberParent\\"][];
    custom_with_arg: (
      parent: T[\\"QueryParent\\"],
      args: ArgsCustom_with_arg,
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => T[\\"NumberParent\\"];
    custom_with_custom_arg: (
      parent: T[\\"QueryParent\\"],
      args: ArgsCustom_with_custom_arg,
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => T[\\"NumberParent\\"];
    scalar_required: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => boolean;
    scalar_nullable: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => boolean | null;
    scalar_array_nullable: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => boolean[] | null;
    scalar_array_required: (
      parent: T[\\"QueryParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => boolean[];
    scalar_with_arg: (
      parent: T[\\"QueryParent\\"],
      args: ArgsScalar_with_arg,
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => boolean;
    scalar_with_custom_arg: (
      parent: T[\\"QueryParent\\"],
      args: ArgsScalar_with_custom_arg,
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => boolean;
  }
}

export namespace INumber {
  export type IdResolver<T extends ITypeMap> = (
    parent: T[\\"NumberParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => string | null;

  export type ValueResolver<T extends ITypeMap> = (
    parent: T[\\"NumberParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => number | null;

  export interface Resolver<T extends ITypeMap> {
    id: (
      parent: T[\\"NumberParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => string | null;
    value: (
      parent: T[\\"NumberParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => number | null;
  }
}

export interface IResolvers<T extends ITypeMap> {
  Query: IQuery.Resolver<T>;
  Number: INumber.Resolver<T>;
}
"
`;

exports[`basic union 1`] = `
"import { GraphQLResolveInfo } from \\"graphql\\";

export interface ITypeMap {
  Context: any;

  UserType: any;
  UserParent: any;
  StudentParent: any;
  ProfessorParent: any;
}

export namespace IUser {
  export type IdResolver<T extends ITypeMap> = (
    parent: T[\\"UserParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => string;

  export type NameResolver<T extends ITypeMap> = (
    parent: T[\\"UserParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => string;

  export type TypeResolver<T extends ITypeMap> = (
    parent: T[\\"UserParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => T[\\"UserType\\"];

  export interface Resolver<T extends ITypeMap> {
    id: (
      parent: T[\\"UserParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => string;
    name: (
      parent: T[\\"UserParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => string;
    type: (
      parent: T[\\"UserParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => T[\\"UserType\\"];
  }
}

export namespace IStudent {
  export type AgeResolver<T extends ITypeMap> = (
    parent: T[\\"StudentParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => number;

  export interface Resolver<T extends ITypeMap> {
    age: (
      parent: T[\\"StudentParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => number;
  }
}

export namespace IProfessor {
  export type DegreeResolver<T extends ITypeMap> = (
    parent: T[\\"ProfessorParent\\"],
    args: {},
    ctx: T[\\"Context\\"],
    info: GraphQLResolveInfo
  ) => string | null;

  export interface Resolver<T extends ITypeMap> {
    degree: (
      parent: T[\\"ProfessorParent\\"],
      args: {},
      ctx: T[\\"Context\\"],
      info: GraphQLResolveInfo
    ) => string | null;
  }
}

export interface IResolvers<T extends ITypeMap> {
  User: IUser.Resolver<T>;
  Student: IStudent.Resolver<T>;
  Professor: IProfessor.Resolver<T>;
}
"
`;
